=== SVN

* Updated to reflect changes in sequel_core (Dataset#clone_merge renamed to Dataset#clone).

=== 0.4 (2008-02-05)

* Fixed Model#set to work with string keys (#143).

* Fixed Model.create to correctly initialize instances marked as new (#135).

* Fixed Model#initialize to convert string keys into symbol keys. This also fixes problem with validating objects initialized with string keys (#136).

=== 0.3.3 (2008-01-25)

* Finalized support for virtual attributes.

=== 0.3.2.1 (2008-01-24)

* Fixed Model.dataset to correctly set the dataset if using implicit naming or inheriting the superclass dataset (thanks celldee).

=== 0.3.2 (2008-01-24)

* Added Model#update_with_params method with support for virtual attributes and auto-filtering of unrelated parameters, and changed Model.create_with_params to support virtual attributes (#128).

* Cleaned up gem spec (#132).

* Removed validations code. Now relying on validations in assistance gem.

=== 0.3.1 (2008-01-21)

* Changed Model.dataset to use inflector to pluralize the class name into the table name. Works in similar fashion to table names in AR or DM.

=== 0.3 (2008-01-18)

* Implemented Validatable::Errors class.

* Added Model#reload as alias to Model#refresh.

* Changed Model.create to accept a block (#126).

* Rewrote validations.

* Fixed Model#initialize to accept nil values (#115).

=== 0.2 (2008-01-02)

* Removed deprecated Model.recreate_table method.

* Removed deprecated :class and :on options from one_to_many macro.

* Removed deprecated :class option from one_to_one macro.

* Removed deprecated Model#pkey method.

* Changed dependency to sequel_core.

* Removed examples from sequel core.

* Additional specs. We're now at 100% coverage.

* Refactored hooks code. Hooks are now inheritable, and can be defined by supplying a block or a method name, or by overriding the hook instance method. Hook chains can now be broken by returning false (#111, #112).

=== 0.1 (2007-12-30)
