@@ -1,5 +1,7 @@
 === SVN
 
+* Changed Model#method_missing to short-circuit and bypass checking #columns if the values hash already contains the relevant column.
+
 * Updated to reflect changes in sequel_core (Dataset#clone_merge renamed to Dataset#clone).
 
 === 0.4 (2008-02-05)
